Try to fix pre rendering problem on iOS

--- a/content/stylesheets/main.sass
+++ b/content/stylesheets/main.sass
@@ -728,6 +728,9 @@ article.big
   h1
     font-size: 4.5rem
 
+  pre, pre[class*="language-"]
+    font-size: 0.75rem !important
+
   .attribution
     display: none
 
